# kelp_aef

./: .flake8  .gitignore  AGENTS.md  LICENSE.txt  Makefile  pyproject.toml
.codex/environments/: environment.toml
configs/: big_sur_pooled_monterey_big_sur_smoke.yaml  big_sur_smoke.yaml  monterey_pooled_monterey_big_sur_smoke.yaml  monterey_smoke.yaml
docs/: architecture.md  backlog.md  data_artifacts.md  phase0_monterey_smoke_decision.md  phase1_bathymetry_dem_source_decision.md  phase1_closeout_model_policy_decision.md  phase1_crm_stratified_sampling_policy_decision.md  phase1_model_domain_hardening.md  phase1_stratified_background_sweep_results.md  phase2_big_sur_generalization.md  product.md  research_plan.md  todo.md
docs/report_snapshots/: monterey_phase0_model_analysis.md  monterey_phase1_closeout_model_analysis.md
src/kelp_aef/: __init__.py  cli.py  config.py  regions.py
src/kelp_aef/alignment/: __init__.py  feature_label_table.py  full_grid.py
src/kelp_aef/domain/: __init__.py  crm_alignment.py  domain_mask.py  noaa_crm.py  noaa_cudem.py  noaa_cusp.py  reporting_mask.py  usgs_3dep.py
src/kelp_aef/evaluation/: __init__.py  baselines.py  binary_presence.py  (+10 more)
tasks/: 01_extract_aef_footprint.md  02_query_aef_stac_catalog.md  02_stage_inspect_aef_tiles.md  03_download_aef_tiles.md  04_download_inspect_kelpwatch.md  05_visualize_kelpwatch_source.md  06_build_annual_labels.md  07_align_features_labels.md  08_train_evaluate_baselines.md  09_map_residuals_area_bias.md  10_model_analysis_report.md  11_correct_full_grid_background_alignment.md  11_full_grid_background_alignment_spec.md  12_phase1_planning_harness.md  13_reference_baselines.md  14_bathymetry_dem_source_plan.md  15_download_noaa_cudem.md  16_download_noaa_cusp.md  17_download_usgs_3dep.md  18_query_download_noaa_crm.md  19_align_noaa_crm_to_target_grid.md  20_build_plausible_kelp_domain_mask.md  21_apply_domain_mask_to_reporting.md  22_apply_domain_mask_to_training_sampling.md  23_mask_aware_residual_diagnostics.md  24_class_target_balance_diagnostics.md  25_annual_max_binary_threshold_comparison.md  26_train_balanced_binary_presence_model.md  27_calibrate_binary_probabilities_thresholds.md  28_train_conditional_canopy_model.md  29_compose_first_hurdle_model.md  30_crm_stratified_background_sampling.md  31_crm_stratified_all_model_comparison.md  32_crm_sampling_policy_decision.md  33_promote_crm_stratified_sampling_default.md  34_remove_sampling_policy_sidecar_reporting.md  35_simplify_phase1_report_story_and_vertical_maps.md  36_test_capped_weight_continuous_model.md  37_test_stratified_background_continuous_model.md  38_remove_failed_p1_22_continuous_paths.md  (+29 more)
tests/: test_aef_catalog.py  test_aef_download.py  test_alignment.py  test_baselines.py  test_binary_presence.py  test_binary_presence_hex.py  test_conditional_canopy.py  test_continuous_objective.py  test_crm_alignment.py  test_domain_mask.py  test_full_grid_alignment.py  test_hurdle.py  test_kelpwatch.py  test_kelpwatch_labels.py  test_kelpwatch_visualize.py  test_model_analysis.py  test_noaa_crm.py  test_noaa_cudem.py  test_noaa_cusp.py  test_package.py  test_pooled_regions.py  test_residual_maps.py  test_results_visualizer.py  test_source_coverage.py  test_transfer.py  test_usgs_3dep.py
(+13 files in other folders)
